fix header spacing

--- a/service/web/css/admin.css
+++ b/service/web/css/admin.css
@@ -1,4 +1,8 @@
-@import url("bootstrap-combined.min.css")
+#content-main{margin-top:40px}
+.page-header {
+  margin-top:70px
+}
+#footer-content{margin-top:20px;padding-top:20px;border-top:1px solid #ddd;}
 ol {
     list-style-type:none;
 }
